Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_iskmedweb.yml
+++ b/.github/workflows/main_iskmedweb.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -56,5 +56,5 @@ jobs:
         with:
           app-name: 'iskmedweb'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4160D26A46DF479D9A71F50E245B4D8B }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_962DD54140214A2C9587849D550EB327 }}
           package: .
